Bug 63881 - RTL8191SEvB: signal level of non connected AP
Summary: RTL8191SEvB: signal level of non connected AP
Status: RESOLVED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: Wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: networking_wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-27 20:27 UTC by Matthieu Baerts
Modified: 2014-01-01 18:39 UTC (History)
2 users (show)

See Also:
Kernel Version: 3.11.3
Subsystem:
Regression: No
Bisected commit-id:


Attachments
output of `lspci -vvvv` (2.54 KB, text/plain)
2013-10-27 20:27 UTC, Matthieu Baerts
Details
Fix returned signal value for non-connected APs (492 bytes, patch)
2013-11-05 20:39 UTC, Larry Finger
Details | Diff

Description Matthieu Baerts 2013-10-27 20:27:35 UTC
Created attachment 112461 [details]
output of `lspci -vvvv`

Hello,

Firstly, thank you for developing and maintaining the Wireless networking subsystem!

I'm using a Realtek WiFi card, it works fine except for the detection of the signal level of non connected AP.
E.g. when I'm using an Entreprise WiFi network with multiple AP: I was connected to an access point. `iwlist` gave me a list of 40 access points (each AP had 5 virtual interfaces and I was connected to one of these interfaces). All non-connected access points had a quality of 70/70 and a signal level of 10 dBm. On the other hand, all 5 virtual interfaces of the current connected access point had a quality of 58/70 and a signal level of -52 dBm.

It's a bit annoying because when roaming is enabled (by default when using Network Manager): it seems that I'm regularly switching between a few AP and then I'm disconnected (or I'm still connected but I can't access to any server).
After having patched NM and wpa_supplicant in order to be less "aggressive" when roaming (to only switch between AP if the signal level is very low), it's much better but the original problem is still there.

About my WiFi chip:

03:00.0 Network controller [0280]: Realtek Semiconductor Co., Ltd. RTL8191SEvB Wireless LAN Controller [10ec:8172] (rev 10)

(more details in the attachment)

Feel free to ask for any other information!

Regards,

Matt
Comment 1 Larry Finger 2013-11-05 20:39:57 UTC
Created attachment 113531 [details]
Fix returned signal value for non-connected APs

The code was returning a signal derived from the rssi; however, that is not available unless the device is associated with the AP.
Comment 2 Matthieu Baerts 2013-11-05 21:14:56 UTC
@Larry: thank you for your help!

Do you want that I try to compile this module with your patch to confirm that this bug is fixed or is it sure that this bug is now fixed with your patch?
Comment 3 Larry Finger 2013-11-05 21:20:58 UTC
I was able to duplicate the +10 dBm result. The patch works for me, but you probably should try the patch to see if it fixes your problem. I am sure it will, and I have already pushed to patch upstream.
Comment 4 Matthieu Baerts 2014-01-01 18:39:03 UTC
I forgot to confirm that this bug is fixed with the patch!

Thank you for your help :-)

Note You need to log in before you can comment on or make changes to this bug.